2009-12-09  Marwan Al Jubeh  <marwan.aljubeh@gmail.com>

        Reviewed by Adam Roben.

        Fixes: https://bugs.webkit.org/show_bug.cgi?id=31228
        Set the WebKitOutputDir, WebKitLibrariesDir and Cygwin environment variables automatically
        in Windows as part of running update_webkit.

        * building/build.html:
         - removed the reference to forgetting to set environment variables as a common source of errors
           on Windows. This is because this patch would make it unnecessary for the user to set these
           variables manually.

2009-12-09  Chris Jerdonek  <chris.jerdonek@gmail.com>

        Reviewed by Darin Adler.

        Added the "using std::foo" rule to the coding style guidelines.
        
        https://bugs.webkit.org/show_bug.cgi?id=32301
        
        Added to the coding style guidelines the "using std::foo" rule
        checked by the check-webkit-style script.  Also clarified the
        "using" statement guidelines that apply to implementation files.

        * coding/coding-style.html:

2009-12-05  Chris Jerdonek  <chris.jerdonek@gmail.com>

        Reviewed by Darin Adler.

        Refactored web site documentation so that advice to add
        WebKitTools/Scripts to your shell path does not appear 
        on multiple pages.
        
        https://bugs.webkit.org/show_bug.cgi?id=32112
        
        * building/build.html:
        * building/checkout.html:
        * building/run.html:
        * coding/coding-style.html:
        * coding/contributing.html:
        * coding/scripts.html: Added.
        * quality/testing.html:

2009-12-04  Marc-Antoine Ruel  <maruel@chromium.org>

        Reviewed by Eric Seidel.

        Add reference to the GTK and QT build wiki pages

        https://bugs.webkit.org/show_bug.cgi?id=32088

        * building/tools.html:
        * css/main.css:

2009-12-01  Chris Jerdonek  <chris.jerdonek@gmail.com>

        Reviewed by Darin Adler.
