@@ -1,3 +1,12 @@
+2009-12-13  Dan Bernstein  <mitz@apple.com>
+
+        Reviewed by Sam Weinig.
+
+        Add a style guideline concerning floating point literals
+        https://bugs.webkit.org/show_bug.cgi?id=32497
+
+        * coding/coding-style.html:
+
 2009-12-09  Marwan Al Jubeh  <marwan.aljubeh@gmail.com>
 
         Reviewed by Adam Roben.
